--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,11 @@
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
             "php artisan optimize"
         ],
+        "post-install-cmd": [
+            "php artisan clear-compiled",
+            "php artisan optimize",
+            "chmod -R 777 public/"
+        ],
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan optimize"
@@ -48,4 +53,5 @@
         "sort-packages": true,
         "optimize-autoloader": true
     }
+
 }
