--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
     "name": "laravel/laravel",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "type": "project",
     "require": {
@@ -36,9 +39,6 @@
         ],
         "post-install-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "php artisan optimize"
-        ],
-        "post-install-cmd": [
             "php artisan clear-compiled",
             "php artisan optimize",
             "chmod -R 777 public/"
@@ -53,5 +53,4 @@
         "sort-packages": true,
         "optimize-autoloader": true
     }
-
 }
