--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,11 @@
-APP_NAME=Laravel
+APP_NAME=contact-manager-laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:bUG/KjBFDughR2OnhAUDqhXWH6bQ+aqFK4q/W/201lw=s
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=https://contact-manager-laravel.herokuapp.com/
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_CONNECTION=sqlite
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
