--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_NAME=contact-manager-laravel
-APP_ENV=local
+APP_ENV=development
 APP_KEY=base64:bUG/KjBFDughR2OnhAUDqhXWH6bQ+aqFK4q/W/201lw=s
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
